--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,24 +2,9 @@ version: 2.1
 
 workflows:
   version: 2
-  build_and_test_deployQA_approval_deployProd:
+  build_and_test:
     jobs:
       - build
-      - package:
-          requires:
-            - build
-      - deployToDev:
-          requires:
-            - package
-      - hold:
-          type: approval
-          requires:
-            - build
-
-      - deployToProd:
-          requires:
-            - hold
-
 
 jobs:
   build:
@@ -33,4 +18,3 @@ jobs:
           paths:
             - build/
             - .gradle/
-
