change jdk version for project compatibility

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ workflows:
 jobs:
   build:
     docker:
-      - image: gradle:alpine
+      - image: circleci/openjdk:8-jdk
     steps:
       - checkout
       - run: ./gradlew bootJar
