--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,4 +26,4 @@ jobs:
       - checkout
       - run: ./gradlew test
       - store_test_results:
-          path: test-results
+          path: build/test-results/
