--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,4 +32,6 @@ jobs:
   deployToStage:
 
     steps:
+      - setup_remote_docker:
+            version: 20.10.14
       - run: docker build --build-arg JAR_FILE=./build/libs/biblioteca-0.0.1-SNAPSHOT.jar -t teamD/biblioteca .
