Add.  modify config yml remove setup and changed jar name
co -authored arulmozhi raju< arulmozhir2010@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,6 @@ jobs:
       - image: cimg/base:stable # primary container will run the latest, production-ready base
     steps:
       -  checkout
-      - setup_remote_docker:
-            version: 20.10.14
-      - run: docker build --build-arg JAR_FILE=./build/libs/*.jar -t teamd/biblioteca .
+#      - setup_remote_docker:
+#            version: 20.10.14
+      - run: docker build --build-arg JAR_FILE=./build/libs/biblioteca-0.0.1-SNAPSHOT.jar -t teamd/biblioteca .
