Add.  modify config yml add build dependency for deploy to stage
co -authored arulmozhi raju< arulmozhir2010@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ workflows:
       - test
       - deployToStage
 
+
 jobs:
   build:
     docker:
@@ -33,7 +34,9 @@ jobs:
     docker: # executor type
       - image: cimg/base:stable # primary container will run the latest, production-ready base
     steps:
-      -  checkout
+      - checkout
       - setup_remote_docker:
           version: 20.10.14
       - run: docker build --iidfile image.txt -f Dockerfile . -t teamd
+    requires:
+      - build
