--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,11 +5,10 @@ workflows:
   build_and_test:
     jobs:
       - build
-          name:buildstep
       - test
-      - deployToStage
+      - deployToStage:
            requires:
-            - buildstep
+            - build
 
 
 jobs:
