--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ workflows:
   build_and_test:
     jobs:
       - build
-      - test
+  #    - test
       - deployToStage:
            requires:
             - build
