Add. attach workspace config yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,5 +39,7 @@ jobs:
       - checkout
       - setup_remote_docker:
           version: 20.10.14
+      - attach_workspace:
+          at: ./
       - run: docker build --iidfile image.txt -f Dockerfile . -t teamd
 
