--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,51 +1,73 @@
 version: 2.1
-orbs:
-  heroku: circleci/heroku@1.2.6
 
 workflows:
-  version: 2
-  build_and_test:
+  build-deploy:
     jobs:
-      - build
-  #    - test
-      - deployToStage:
-           requires:
-            - build
-
+      - build-deploy
 
 jobs:
-  build:
-    docker:
-      - image: circleci/openjdk:8-jdk
+  build-deploy:
+    machine: true
     steps:
       - checkout
-      - run: ./gradlew bootJar
-      - persist_to_workspace:
-          root: ./
-          paths:
-            - build/
-            - .gradle/
-  test:
-    docker:
-      - image: circleci/openjdk:8-jdk
-    steps:
-      - checkout
-      - run: ./gradlew test
-      - store_test_results:
-          path: build/test-results/
-
-  deployToStage:
-    docker: # executor type
-      - image: cimg/base:stable # primary container will run the latest, production-ready base
-    steps:
-      - checkout
-      - heroku/install
-      - setup_remote_docker:
-         version: 20.10.14
-      - attach_workspace:
-               at: ./
-       - run: docker build --iidfile image.txt -f Dockerfile . -t teamd
-      - heroku/deploy-via-git:
+      - run:
+          name: Build and push Docker image to Heroku
+          command: |
+            set -x
+            sudo curl https://cli-assets.heroku.com/install.sh | sh
+            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:login
+            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push -a biblioteca-stage web
+            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release -a biblioteca-stage web
 
 
-
+#version: 2.1
+#orbs:
+#  heroku: circleci/heroku@1.2.6
+#
+#workflows:
+#  version: 2
+#  build_and_test:
+#    jobs:
+#      - build
+#  #    - test
+#      - deployToStage:
+#           requires:
+#            - build
+#
+#
+#jobs:
+#  build:
+#    docker:
+#      - image: circleci/openjdk:8-jdk
+#    steps:
+#      - checkout
+#      - run: ./gradlew bootJar
+#      - persist_to_workspace:
+#          root: ./
+#          paths:
+#            - build/
+#            - .gradle/
+#  test:
+#    docker:
+#      - image: circleci/openjdk:8-jdk
+#    steps:
+#      - checkout
+#      - run: ./gradlew test
+#      - store_test_results:
+#          path: build/test-results/
+#
+##  deployToStage:
+##    docker: # executor type
+##      - image: cimg/base:stable # primary container will run the latest, production-ready base
+##    steps:
+##      - checkout
+##      - heroku/install
+##      - setup_remote_docker:
+##         version: 20.10.14
+##      - attach_workspace:
+##               at: ./
+##       - run: docker build --iidfile image.txt -f Dockerfile . -t teamd
+##      - heroku/deploy-via-git:
+#
+#
+#
