--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
     machine: true
     steps:
       - checkout
+      - attach_workspace:
+          at: ./
       - run:
           name: Build and push Docker image to Heroku
           command: |
