refactor. replaced the image push steps into deployToStage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,13 @@ workflows:
   build_and_test:
     jobs:
       - build
-      - test
+#      - test
       - deployToStage:
            requires:
             - build
-      - build-deploy-heroku:
-          requires:
-            - deployToStage
+#      - build-deploy-heroku:
+#          requires:
+#            - deployToStage
 
 
 jobs:
@@ -45,11 +45,6 @@ jobs:
       - attach_workspace:
           at: ./
       - run: docker build --iidfile image.txt -f Dockerfile . -t teamd
-
-  build-deploy-heroku:
-    machine: true
-    steps:
-      - checkout
       - run:
           name: Build and push Docker image to Heroku
           command: |
@@ -58,3 +53,16 @@ jobs:
             HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:login
             HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push -a biblioteca-stage web
             HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release -a biblioteca-stage web
+
+#  build-deploy-heroku:
+#    machine: true
+#    steps:
+#      - checkout
+#      - run:
+#          name: Build and push Docker image to Heroku
+#          command: |
+#            set -x
+#            sudo curl https://cli-assets.heroku.com/install.sh | sh
+#            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:login
+#            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push -a biblioteca-stage web
+#            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release -a biblioteca-stage web
