--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,4 @@
 spring:
-  server:
-    port: $PORT
   datasource:
     url: jdbc:h2:mem:bibliotecadb
   jpa:
@@ -10,3 +8,6 @@ spring:
   h2:
     console:
       enabled: true
+ server:
+    port: ${PORT:8080}
+    
