remove commented code and making build test deployment run in sequence

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,12 @@ workflows:
   build_and_test:
     jobs:
       - build
-#      - test
-      - deployToStage:
+      - test:
            requires:
             - build
-#      - build-deploy-heroku:
-#          requires:
-#            - deployToStage
+      - deployToStage:
+           requires:
+            - test
 
 
 jobs:
@@ -54,15 +53,3 @@ jobs:
             HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push -a biblioteca-stage web
             HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release -a biblioteca-stage web
 
-#  build-deploy-heroku:
-#    machine: true
-#    steps:
-#      - checkout
-#      - run:
-#          name: Build and push Docker image to Heroku
-#          command: |
-#            set -x
-#            sudo curl https://cli-assets.heroku.com/install.sh | sh
-#            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:login
-#            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push -a biblioteca-stage web
-#            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release -a biblioteca-stage web
