--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	runtimeOnly 'com.h2database:h2'
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
-
+	implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
