--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,8 @@ spring:
   h2:
     console:
       enabled: true
+      settings:
+        web-allow-others: true
 server:
   port: ${PORT:8080}
     
