--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-//	implementation 'org.flywaydb:flyway-core'
+	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	runtimeOnly 'com.h2database:h2'
+	implementation 'org.postgresql:postgresql:42.3.6'
+
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.22'
 	implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
