Refractor. change db url to env variable
Co-authored-by: Vidhiya Priya
<vidhiyapriya@gmail.com
>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     platform: postgres
-    url: jdbc:postgresql://localhost:5432/postgres
-    username: postgres
-    password: password
+    url: ${databaseURL}
+    username: ${dbusername}
+    password: ${dbpassword}
     driverClassName: org.postgresql.Driver
   jpa:
     database: postgresql
