Refractor Driver class name for postgresDb
Co-authored-by: Vidhiya Priya
<vidhiyapriya@gmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     url: ${databaseURL}
     username: ${dbusername}
     password: ${dbpassword}
-    driverClassName: org.postgresql.Driver
+    driverClassName: ${dbDriverClassName}
   jpa:
     database: postgresql
     show-sql: true
