Refractor Driver class name for postgresDb
Co-authored-by: Vidhiya Priya
<vidhiyapriya@gmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   datasource:
-    platform: postgres
     url: ${databaseURL}
     username: ${dbusername}
     password: ${dbpassword}
-    driverClassName: ${dbDriverClassName}
+    driverClassName: org.postgresql.Driver
   jpa:
-    database: postgresql
+    database:
+      platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     hibernate:
       ddl-auto: create
