--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,12 @@ workflows:
   build_and_test:
     jobs:
       - build
-      #- test:
-           #requires:
-            #- build
+#       - test:
+#            requires:
+#             - build
       - deployToStage:
-           requires:
-            - test
+#            requires:
+#             - test
 
 
 jobs:
