Add. user can checkout book from view all boos screen
nagu kumar<nagupsgtech@gmail.com>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
       platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   flyway:
     locations:
       classpath:/db_migrations
