--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ workflows:
 #       - test:
 #            requires:
 #             - build
-      - deployToStage:
+      - deployToStage
 #            requires:
 #             - test
 
