--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: ${databaseURL}
+    url: ${DATABASE_URL}
     username: ${dbusername}
     password: ${dbpassword}
     driverClassName: org.postgresql.Driver
