Remove. flyway location in test\application. yml file

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,7 +10,9 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-  
+flyway:
+  check-location: true
+  locations: classpath:db/migration
 server:
   port: ${PORT:8080}
 
