--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 spring:
   datasource:
-    url: ${DB_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD]
+    url: ${DATABASE_URL}
     driverClassName: org.postgresql.Driver
   jpa:
     database:
