--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     platform: postgres
-    url: ${DATABASE_URL}
+    url: ${DB_URL}
     driverClassName: org.postgresql.Driver
   jpa:
     database: POSTGRESQL
