--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,9 @@ dependencies {
 	implementation 'org.flywaydb:flyway-core'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.postgresql:postgresql:42.3.6'
-    implementation 'org.jetbrains:annotations:20.1.0'
-    runtimeOnly 'com.h2database:h2'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	runtimeOnly 'com.h2database:h2'
 	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
 	implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
