--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
-  thymeleaf:
-    cache: false
-    prefix: file:src/main/resources/templates/
+#  thymeleaf:
+#    cache: false
+#    prefix: file:src/main/resources/templates/
   datasource:
     platform: postgres
     url: ${DB_URL}
