Remove requires deploytostage job from deploytoprod

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ workflows:
             - test
       - deployToProd:
            requires:
-            - deployToStage
+            - test
 
 
 jobs:
