--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,8 @@ jobs:
       - run: ./gradlew test
       - store_test_results:
           path: build/test-results/
+      - store_artifacts:
+          path: target
 
   deployToStage:
     docker: # executor type
