--- a/build.gradle
+++ b/build.gradle
@@ -19,11 +19,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.postgresql:postgresql:42.3.6'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
+	implementation 'org.projectlombok:lombok:1.18.24'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+	implementation 'org.jacoco:org.jacoco.report:0.8.8'
+
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
-	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.24'
-	implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.Final'
-	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 }
