Change the stage app name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,8 +57,8 @@ jobs:
             set -x
             sudo curl https://cli-assets.heroku.com/install.sh | sh
             HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:login
-            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push -a biblioteca-stage web
-            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release -a biblioteca-stage web
+            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:push -a biblioteca-stg web
+            HEROKU_API_KEY=${HEROKU_API_KEY} heroku container:release -a biblioteca-stg web
 
   deployToProd:
     docker: # executor type
